<resources>
    <string name="app_name">Demo weather app</string>
    <string name="GPSAlertDialogTitle">Геолокация</string>
    <string name="GPSAlertDialogMessage">Разрешить геолокацию?</string>
    <string name="action_settings">Настройки</string>
    <string name="cancel">Отмена</string>
    <string name="current_label">Current</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <string name="next_7_days_hourly">Next 7 days</string>

    <string name="imageUrl">http://openweathermap.org/img/wn/%1$s@2x.png</string>
    <string name="wind_unit_label">%.0f m/s</string>
    <string name="empty_text">Empty</string>
    <string name="pressure_label">Pressure</string>
    <string name="pressure_unit_label">%1$d hpa</string>
    <string name="sunrise_text_label">Sunrise</string>
    <string name="sunset_text_label">Sunset</string>
    <string name="pressure_text_label">Pressure</string>
    <string name="cloudiness_label">Cloudiness</string>
    <string name="cloudiness_unit_label">%1$d %</string>
    <string name="zero_label">0%d</string>

</resources>
