<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layoutDirection="locale"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingTop="16dp"
            tools:context=".ui.activity.MainActivity">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="30dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/day_name_text_view"
                            style="@style/TextViewInColoredCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/animation_view"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    style="@style/IconInColoredCard"
                                    android:layout_width="36dp"
                                    android:layout_height="36dp"
                                    android:gravity="center"
                                    app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                                    tools:ignore="TooDeepLayout" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/min_temp_text_view"
                                    style="@style/SubTextViewInColoredCard"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:layoutDirection="ltr"
                                    android:textSize="30sp" />
                            </LinearLayout>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/temp_text_view"
                                style="@style/TextViewInColoredCard"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layoutDirection="ltr"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textSize="60sp" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    style="@style/IconInColoredCard"
                                    android:layout_width="36dp"
                                    android:layout_height="36dp"
                                    android:gravity="center"
                                    app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/max_temp_text_view"
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:layoutDirection="ltr"
                                    android:textSize="30sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/sunrise_text_label"
                            tools:ignore="NestedWeights" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sunrise_textview"
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layoutDirection="ltr" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/sunset_text_label"
                            tools:ignore="NestedWeights" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sunset_textview"
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layoutDirection="ltr" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/pressure_text_label"
                            tools:ignore="NestedWeights" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/pressure_text_view"
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layoutDirection="ltr" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/humidity_label"
                            tools:ignore="NestedWeights" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/humidity_text_view"
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layoutDirection="ltr" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/wind_label"
                            tools:ignore="NestedWeights" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/wind_text_view"
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layoutDirection="ltr" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/cloudiness_label"
                            tools:ignore="NestedWeights" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/cloudiness_text_view"
                            style="@style/DescriptionTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layoutDirection="ltr" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>